--- a/reserva/templates/dashboard.html
+++ b/reserva/templates/dashboard.html
@@ -7,7 +7,7 @@
     
 {% block conteudo %}
 <div  class="container-fluid">
-    <div id="dashboardContainer" class="container">
+    <div id="mainContainer" class="container">
     <h1>
         Página Inicial</h1>  
     
