--- a/reserva/templates/index.html
+++ b/reserva/templates/index.html
@@ -12,8 +12,9 @@
 <div id="page-top" class="container-fluid">
     <nav id="indexNavbar" class="navbar navbar-expand-lg fixed-top">
         <div class="container px-5">
-            <a class="navbar-brand" href="#page-top"><h1 id="navbarLogo" class="fs-4"><span class="bg-white rounded shadow px-2 me-2"><i class="fa-solid fa-guitar text-dark"></i></span>
-                <span>iNFO MúSiCA</span></h1></a>
+            <a class="navbar-brand" href="#page-top"><h1 id="navbarLogo" class="fs-5">
+                <span class="bg-white rounded shadow px-2 me-2"><i class="fa-solid fa-guitar text-dark"></i></span>
+                iNFO MúSiCA</h1></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa-solid fa-bars text-white"></i></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -29,7 +30,7 @@
         <div class="masthead-content">
             <div class="container px-5">
                 <h1 class="masthead-heading mb-0">Muito Rock</h1>
-                <h2 class="masthead-subheading mb-0">E o projeto? Nada ainda?</h2>
+                <h3 class="masthead-subheading mb-0">E o projeto? Nada ainda?</h3>
                 <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">SAIBA MAIS</a>
             </div>
         </div>
@@ -42,7 +43,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'img/cirilo.gif'%}" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle index-image" src="{% static 'img/cirilo.gif'%}" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
@@ -58,7 +59,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'img/pat-moonless.gif'%}" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle index-image" src="{% static 'img/django-king.gif'%}" alt="..." /></div>
                 </div>
                 <div class="col-lg-6">
                     <div class="p-5">
@@ -74,7 +75,7 @@
         <div class="container px-5">
             <div class="row gx-5 align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="img-fluid rounded-circle" src="{% static 'img/joel.gif'%}" alt="..." /></div>
+                    <div class="p-5"><img class="img-fluid rounded-circle index-image" src="{% static 'img/joel.gif'%}" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
