--- a/reserva/templates/profile.html
+++ b/reserva/templates/profile.html
@@ -8,7 +8,7 @@
 
 {% block conteudo %}
 <div class="container fluid">
-<div class="container" id="profileContainer">
+<div id="mainContainer" class="container" >
 
     <div class="row">
 		<div class="col-md-10"><h1>{{Titulo}}</h1>
@@ -29,7 +29,7 @@
 		</div>
 		
 		<div class="col-md-4">
-			<table id="tableProfile" class="table table-dark table-hover table-borderless">
+			<table id="tableProfile" class="table  table-hover table-borderless">
 				<tbody>
 					<tr >
                         <td>E-mail</td>
