--- a/reserva/templates/change-password.html
+++ b/reserva/templates/change-password.html
@@ -9,9 +9,8 @@
 {% block conteudo %}
 <div class="container fluid">
 <div class="container">
-    <div class="my-5 mx-auto top-50 p-5 text-white ">
-    <h3>Mudar Senha</h3>
-    <p class='lead'> </p>
+    <div class="mx-auto p-5">
+    <h2>Mudar Senha</h2>
 
     <hr>
     <div>
