--- a/reserva/templates/footer.html
+++ b/reserva/templates/footer.html
@@ -3,7 +3,7 @@
 <footer class="container-fluid">
   
   <div class="container d-flex align-items-center">
-    <p class="lead text fs-6 fst-italic">Todos os direitos reservados.</p>
+    <p class="lead text fst-italic">Todos os direitos reservados.</p>
     <span class="ms-auto">INFOMÚSICA™</span>
   </div>
 </footer>
