--- a/reserva/templates/lista/adm-parcial-list.html
+++ b/reserva/templates/lista/adm-parcial-list.html
@@ -38,7 +38,7 @@
         type="button" 
         class="btn btn-danger btn-sm mx-auto js-delete" 
         data-url="{% url 'js-excluir' solicitacao.pk %}"><i class="fa-solid fa-trash"></i>
-        Excluir</button>
+        Exluir</button>
     </div>
     </td>
 </tr>
