--- a/reserva/templates/lista/parcial-delete.html
+++ b/reserva/templates/lista/parcial-delete.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="modal-body">
-        <p class="lead">Tem certeza que deseja excluir essa solicitação <strong style="color: rgb(233, 99, 99);">{{solicitacao}}</strong>?</p>
+        <p>Tem certeza que deseja excluir essa solicitação <strong style="color: rgb(233, 99, 99);">{{solicitacao}}</strong>?</p>
     </div>        
 
     <div class="modal-footer">
