--- a/reserva/templates/lista/solicitacao.html
+++ b/reserva/templates/lista/solicitacao.html
@@ -7,24 +7,23 @@
 
 {% block conteudo %}
 <div class="container-fluid">
-<div id="solicitacaoContainer" class="container">
+<div id="mainContainer" class="container">
     <h1>Lista de Solicitações</h1>
     
     <hr>
 
     <div class="row d-flex align-items-center">
-		<div class="col-md-10 my-1">
+		<div class="col-md-9 col-sm-7 my-1 me-auto">
 
             <!-- Filtro de Data -->
-                <select class="form-select bg-dark text-white" 
+                <select id="dataSelect" class="form-select" 
                         data-bs-toggle="tooltip" 
                         data-bs-placement="top"
                         data-bs-custom-class="custom-tooltip"
                         data-bs-title="Filtro de Data" 
                         id="floatingSelect" 
                         aria-label="Select Menu" 
-                        onchange="window.location.href=this.value;" 
-                        style="width: 200px;">
+                        onchange="window.location.href=this.value;" >
                     <option value="?filtro_data=todas" {% if 'todas' in request.GET.filtro_data|default:'' %}selected{% endif %}>
                         Todas</option>
                     <option value="?filtro_data=ultima_semana" {% if 'ultima_semana' in request.GET.filtro_data %}selected{% endif %}>
@@ -37,10 +36,10 @@
                         Próximo mês</option>
                 </select>
 		</div>
-		<div class="col-md-2 my-1">
+		<div class="col-md-3 col-sm-5 my-1 ms-auto">
 
             <button type="button" class="btn btn-secondary js-create" data-url="{% url 'js-criar' %}">
-                <strong>NOVA SOLICITAÇÃO</strong></button>
+                NOVA SOLICITAÇÃO</button>
             <div class="modal fade" id="modal-evento">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
@@ -56,11 +55,11 @@
     <hr>
 
     <div class="table-responsive">
-        <table id="table-evento" class="table table-striped table-dark table-hover table-border">
+        <table id="table-evento" class="table table-striped table-dark table-hover table-border align-middle">
             
     {% for group in request.user.groups.all %}
     {% if group.name == 'Admin' %}
-            <thead class="text-uppercase">
+            <thead>
                 <th>Usuario</th>
                 <th>Matricula</th>
                 <th>Status</th>
@@ -75,7 +74,7 @@
                 {%  include 'lista/adm-parcial-list.html'  %}
             </tbody>
     {%else%}
-            <thead class="text-uppercase">
+            <thead>
                 <th>Status</th>
                 <th>Justificativa</th>
                 <th>Data</th>
@@ -94,53 +93,54 @@
     </div>
 
     <!-- PAGINAÇÃO -->
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
+        <nav aria-label="Page navigation example" class="my-3">
+            <ul class="pagination justify-content-center">
 
-        <!-- PRIMEIRA -->
-            {% if page_obj.number != 1 %}
-            <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page=1"><i class="fa-solid fa-angles-left"></i></a>
-            {%else%}
+            <!-- PRIMEIRA -->
+                {% if page_obj.number != 1 %}
+                <li class="page-item">
+                    <a class="page-link text-white bg-dark" href="?page=1"><i class="fa-solid fa-angles-left"></i></a>
+                {%else%}
 
-            {%endif%}
-            </li>
-        
-        <!-- PÁGINA ANTERIOR -->
-            {% if page_obj.has_previous %}  
-            <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page={{ page_obj.previous_page_number }}">ANTERIOR</a>
-            {%else%}
+                {%endif%}
+                </li>
+            
+            <!-- PÁGINA ANTERIOR -->
+                {% if page_obj.has_previous %}  
+                <li class="page-item">
+                    <a class="page-link text-white bg-dark" href="?page={{ page_obj.previous_page_number }}">ANTERIOR</a>
+                {%else%}
+                <li class="page-item disabled">
+                    <a class="page-link text-white-50 bg-dark" href="">ANTERIOR</a>
+                {%endif%}
+                </li>
+
+            <!-- PÁGINA ATUAL -->
             <li class="page-item disabled">
-                <a class="page-link text-white-50 bg-dark" href="#">ANTERIOR</a>
-            {%endif%}
-            </li>
+                <div class="page-link current text-white bg-dark">
+                    PÁGINA {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</div></li>
 
-        <!-- PÁGINA ATUAL -->
-          <li class="page-item disabled">
-            <div class="page-link current text-white bg-dark">
-                PÁGINA {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</div></li>
+            <!-- PROXIMA PAGINA -->
+                {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link text-white bg-dark" href="?page={{ page_obj.next_page_number }}">PRÓXIMA</a>
+                {%else%}
+                <li class="page-item disabled">
+                    <a class="page-link text-white-50 bg-dark" href="#">PRÓXIMA</a>
+                {%endif%}
+                </li>
 
-        <!-- PROXIMA PAGINA -->
-            {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page={{ page_obj.next_page_number }}">PRÓXIMA</a>
-            {%else%}
-            <li class="page-item disabled">
-                <a class="page-link text-white-50 bg-dark" href="#">PRÓXIMA</a>
-            {%endif%}
-            </li>
+                <!-- ULTIMA -->
+                {% if page_obj.number != page_obj.paginator.num_pages %}
+                <li class="page-item">
+                    <a class="page-link text-white bg-dark" href="?page={{ page_obj.paginator.num_pages }}"><i class="fa-solid fa-angles-right"></i></a>
+                {%else%}
 
-            <!-- ULTIMA -->
-            {% if page_obj.number != page_obj.paginator.num_pages %}
-            <li class="page-item">
-                <a class="page-link text-white bg-dark" href="?page={{ page_obj.paginator.num_pages }}"><i class="fa-solid fa-angles-right"></i></a>
-            {%else%}
+                {%endif%}
+                </li>
+            </ul>
+        </nav>
 
-            {%endif%}
-            </li>
-        </ul>
-      </nav>
 </div>   
 </div>
 {% endblock %}
