--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Poppins:wght@300;400;500;600&display=swap');
 
 :root{
     --deep-color: #0a0d10;
@@ -7,22 +7,20 @@
     --mid-color: #45518A ;
     --secondary-color: #9EABE2 ;
     --primary-color: #D8DCF0;
+    --toggle-color: #3655f5 ;
     --contrast-color: #f5fcfd; 
 }
-/* Color Theme Swatches in Hex */
+
+
 .cores-doidas-1-hex { color: #E8FFF3; }
 .cores-doidas-2-hex { color: #283340; }
 
-
-/* Color Theme Swatches in Hex */
 .azul-madrugada-1-hex { color: #14151C; }
 .azul-madrugada-2-hex { color: #282F4F; }
 .azul-madrugada-3-hex { color: #45518A; }
 .azul-madrugada-4-hex { color: #9EABE2; }
 .azul-madrugada-5-hex { color: #D8DCF0; }
 
-
-/* Color Theme Swatches in Hex */
 .preliminary-bi-palette-neutrals-1-hex { color: #000000; }
 .preliminary-bi-palette-neutrals-2-hex { color: #A69F95; }
 .preliminary-bi-palette-neutrals-3-hex { color: #7A7A7A; }
@@ -30,39 +28,45 @@
 .preliminary-bi-palette-neutrals-5-hex { color: #606B73; }
 
 
+* {
+    font-family: 'Poppins';
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-background: var(--low-color);
+    background: var(--low-color);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
 background: var(--secondary-color);
+    border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-background: var(--primary-color);
-}
-
-
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    background: var(--primary-color);
 }
 
 body{
     display: flex;
     flex-direction: column;
     background-color:  var(--main-color);
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    color: var(--contrast-color)
 
+}
+
+
+body p.lead{
+    font-size: 15px;
 }
 
 a {
@@ -71,58 +75,191 @@ a {
 }
 
 a:hover {
-    color: var(--primary-color);
+    color: var(--toggle-color);
 }
 
 hr {
     color: var(--mid-color);
 }
 
-h1 {
-    color: var(--contrast-color);
-    font-family: 'Chelsea Market';
+h1, h2, h3 {
+    font-family: 'Mochiy Pop One';
 }
 
 footer {
-    flex-shrink: 0;
     background-color: var(--low-color);
-    color: var(--contrast-color);
     padding-top: 1% ;
     padding-bottom: 4%;
 
     
 }
 
-#dashboardContainer {
-    flex: 1 0 auto;
+/*  CONTAINER */
+#mainContainer {
     margin-top: 1%;
     margin-bottom: 1%;
-}
-
-#solicitacaoContainer {
-    color: var(--contrast-color);
-    margin-top: 1%;
-}
-
-#profileContainer {
-    color: var(--contrast-color);
-    margin-top: 1%;
     padding-top: 2%;
     padding-left: 1%;
-    padding-bottom: 4%;
 }
 
-#box{
+
+#loginContainer{
+    margin-top: 10%;
     width: 550px ;
 }
 
 #modalSolicitacao {
     background-color: var(--main-color);
+}
+
+/*  SIDE NAVBAR */
+#sideNavbar{
+    background: var(--deep-color);
+    color: var(--primary-color);
+    min-width: 250px;
+    max-width: 250px;
+    transition: all 0.3s;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+
+#navbarLogo {
+    font-family: 'Mochiy Pop One';
+    margin-left: 1%;
+}
+
+#sideNavbar a{
+    color: var(--primary-color);
+    border-radius: 10px;
+    padding-left: 3%;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+#sideNavbar a:hover {
+    background-color: var(--secondary-color);
+    color: var(--deep-color);
+}   
+
+#topNavbar {
+    background-color: var(--low-color);
+}
+
+#topNavbar a, #topNavbar i{
     color: var(--contrast-color);
 }
 
-#login{
-    justify-content: center;
+#profileDropdown{
+    background-color: var(--main-color);
+    border-color: var(--secondary-color);
+}
+
+#profileDropdown :hover{
+    background-color: var(--secondary-color);
+    color:  var(--deep-color);
+}
+
+.content{
+    min-height: 100vh;
+    width: 100%;
+}
+.sidenavbar hr.h-color{
+    background: var(--secondary-color);
+}
+
+/*  SOLCITACAO */
+#dataSelect{
+    background-color: var(--deep-color);
+    border-color:  var(--mid-color);
+    color: var(--contrast-color);
+    width: 300px;
+}
+
+/*  PROFILE */
+#tableProfile td{
+    background-color: var(--main-color);
+    color: var(--contrast-color);
+    font-size: large;
+}
+
+#cardEditProfile {
+    background-color: var(--deep-color);
+}
+
+
+/*  FORM CONTENT */
+.form-text {
+    color: var(--primary-color);
+    font-size: small ;
+}
+
+.asteriskField {
+    color: transparent;
+}
+
+.form-control {
+    background-color: var(--deep-color);
+    color: var(--contrast-color);
+    border-width: 1%;
+    border-color: var(--mid-color);
+}
+
+
+.custom-tooltip {
+    --bs-tooltip-bg: var(--deep-color);
+    --bs-tooltip-color: var(--secondary-color);
+    font-size: large;
+}
+
+/*  INDEX */
+#page-top, #page-top h1, #page-top a{
+    color: var(--contrast-color)
+} 
+
+#indexNavbar{
+    background-color: var(--main-color);
+}
+
+#titleIndex{
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 20%; 
+    padding-bottom: 20%;
+}
+#titleIndex h1, #titleIndex h3{
+    text-shadow: 0 0 10px #000, 0 0 10px #000;
+}
+.index-image{
+    width: 150%;
+    height: 150%;
+}
+
+.btn-primary {
+    background-color: var(--toggle-color);
+    border-color: var(--mid-color);
+}
+
+.btn-primary:hover{
+    background-color: var(--mid-color);
+    border-color: var(--mid-color);
+}
+
+.btn-secondary {
+    background-color: var(--mid-color);
+    border-color: var(--low-color);   
+}
+.btn-secondary:hover{
+    background-color: var(--low-color);
+    border-color: var(--mid-color);
+}
+
+.btn-dark {
+    background-color: var(--low-color);
+    border-color: var(--deep-color);  
+}
+.btn-dark:hover {
+    background-color: var(--main-color);
+    border-color: var(--main-color);   
 }
 
 .butao{
@@ -136,17 +273,10 @@ footer {
     color: greenyellow
 }
 
-@media screen and (max-width: 770px){
-    #menuNavbar a {
-        border-radius: 30px;
-    }
 
+@media screen and (max-width: 768px){
     body{
-        font-size: 15px;
-    }
-    thead{
-        width:100px ;
-        font-size: 10px;
+        font-size: 13px;
     }
 
     #box{
@@ -157,73 +287,7 @@ footer {
         width: 140px;
         margin-top: 10px;
     }
-}
 
-#sideNavbar{
-background: var(--deep-color);
-color: var(--primary-color);
-min-width: 250px;
-max-width: 250px;
-transition: all 0.3s;
-padding-top: 1%;
-padding-bottom: 1%;
-}
-
-#navbarLogo {
-    color: var(--contrast-color);
-    font-family: 'Chelsea Market';
-    margin-left: 1%;
-}
-
-#sideNavbar a{
-    color: var(--primary-color);
-    border-radius: 10px;
-    padding-left: 3%;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-#sideNavbar a:hover {
-    background-color: var(--primary-color);
-    color: var(--main-color);
-}   
-
-#topNavbar {
-    background-color: var(--low-color);
-    color: var(--contrast-color);
-}
-
-#topNavbar a, #topNavbar i{
-    color: var(--contrast-color);
-}
-
-#profileNavbar{
-    background-color: var(--deep-color);
-}
-
-#profileNavbar :hover{
-    background-color: var(--primary-color);
-    color:  var(--deep-color);
-}
-
-.content{
-    min-height: 100vh;
-    width: 100%;
-}
-.sidenavbar hr.h-color{
-    background: var(--secondary-color);
-}
-
-#tableProfile td{
-    background-color: var(--main-color);
-    color: var(--contrast-color);
-    font-size: large;
-}
-
-#cardEditProfile {
-    background-color: var(--deep-color);
-}
-
-@media(max-width: 767px){
     #sideNavbar{
         margin-left: -250px;
         position: absolute;
@@ -234,44 +298,51 @@ padding-bottom: 1%;
     #sideNavbar.active{
         margin-left: 0;
         }
-}
-
-.form-text {
-    color: var(--primary-color);
-    font-size: small ;
-}
-
-.asteriskField {
-    color: lightcoral;
-}
-
-.form-control {
-    background-color: var(--deep-color);
-    border-width: 1%;
-    border-color: var(--mid-color);
-    color: var(--contrast-color);
-}
-
-.custom-tooltip {
-    --bs-tooltip-bg: var(--deep-color);
-    --bs-tooltip-color: var(--secondary-color);
-    font-size: large;
+        
+    #dataSelect{
+        width: 150px;
+    }
+    
 }
 
 
-#page-top, #page-top h1, #page-top a{
-    color: var(--contrast-color)
-} 
 
-#indexNavbar{
-    background-color: var(--main-color);
-}
+@media screen and (max-width: 576px){
+    body{
+        font-size: small;
+    }
 
-#titleIndex{
-    text-shadow: 0 0 3px #000, 0 0 5px #000;
+    footer p.lead{
+        font-size: x-small;
+    }
+    #mainContainer .page-link{
+        font-size: x-small;
+    }
+
+    #loginContainer{
+        margin-top: 40%;
+        width: 360px;
+    }
+
+    .btn {
+        font-size: small;
+    }
+
+    #titleIndex{
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 20%; 
+    background-size: 130%;
+    padding-top: 30%; 
     padding-bottom: 20%;
+    }
+
+    .table-responsive thead{
+        font-size: x-small;
+        text-transform: uppercase;
+    }
+    .hidden-mobile{
+        display: none;
+    }
+    #dataSelect{
+        font-size: 11px;
+    }
 }
