--- a/reserva/templates/change-password.html
+++ b/reserva/templates/change-password.html
@@ -9,7 +9,7 @@
 {% block conteudo %}
 <div class="container fluid">
 <div class="container">
-    <div class="mx-auto p-5">
+    <div class="mx-auto p-5 sm-p-3">
     <h2>Mudar Senha</h2>
 
     <hr>
