--- a/reserva/templates/login.html
+++ b/reserva/templates/login.html
@@ -22,7 +22,7 @@
         <hr>
         <p class="lead">
             <b>Houve algum problema para processar a ação desejada ou você não tem permissão.</b></p>
-        <a href="{% url 'inicio' %}" class="btn btn-secondary"> VOLTAR AO INICIO</a>
+        <a href="{% url 'index' %}" class="btn btn-secondary"> VOLTAR AO INICIO</a>
 
         {% else %}
 
@@ -47,6 +47,10 @@
         
         </div>
     </div>
+
+    
+
+
 </div>        
 </div>
 {% endblock %}
