--- a/reserva/templates/dashboard.html
+++ b/reserva/templates/dashboard.html
@@ -8,19 +8,64 @@
 {% block conteudo %}
 <div  class="container-fluid">
     <div id="mainContainer" class="container">
-    <h1>
-        Página Inicial</h1>  
-    
-    <hr>
-    
-    <div class="d-flex align-items-center">
-            <a id="createButton" class="" href="{% url 'criar-solicitacao' %}">
-                <strong>Solicite um horário para reservar a Sala de Música.</strong></a>
+        <h1>
+            Página Inicial</h1>  
+        
+        <hr>
+        
+        <div class="d-flex align-items-center">
+                <a id="createButton" class="" href="{% url 'criar-solicitacao' %}">
+                    <strong>Solicite um horário para reservar a Sala de Música.</strong></a>
 
-    </div>
-      
-    <hr>
+        </div>
+        
+        <hr>
 
-    </div>
+        <div id="calendarRow" class="row d-flex py-2">
+            <div class="col-md-9 mx-auto">
+                <div id='calendar'></div> 
+                </div>
+        </div>
+        
+    </div> 
+        
 </div>
+{% endblock %}
+
+{% block script %}
+    
+<script>
+
+    document.addEventListener('DOMContentLoaded', function() {
+      var calendarEl = document.getElementById('calendar');
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth',
+        locale: 'pt-br',
+        buttonText: {today: 'Hoje'},
+        dayMaxEventRows: true, // for all non-TimeGrid views
+            views: {
+                timeGrid: {
+                dayMaxEventRows: 6 // adjust to 6 only for timeGridWeek/timeGridDay
+                }
+            },
+
+        events: [
+            {% for solicitacao in object_list %}
+                {
+                    title: '{{ solicitacao.usuario }}',
+                    start: '{{ solicitacao.data | date:"Y-m-d" }}T{{solicitacao.hora}}',
+                    end: '{{ solicitacao.data | date:"Y-m-d" }}T{{solicitacao.hora}}',
+                    extendedProps: {
+                        justificativa: '{{ solicitacao.justificativa }}'
+                    },
+                }, 
+            {% endfor %}
+        ],
+
+      });
+      calendar.render();
+    });
+
+  </script>
+
 {% endblock %}
