--- a/reserva/templates/sing-up.html
+++ b/reserva/templates/sing-up.html
@@ -14,7 +14,7 @@
 
 {% block conteudo %}
 <div class="container">
-    <div class="my-5 mx-auto p-3">
+    <div class="my-5 mx-auto p-5 sm-p-3">
     <h1>Criar Conta</h1>
     <p class='lead'> Preencha todos os campos obrigatórios.</p>
 
