--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -122,6 +122,7 @@ footer {
     transition: all 0.3s;
     padding-top: 1%;
     padding-bottom: 1%;
+    z-index: 2;
 }
 
 #navbarLogo {
@@ -133,7 +134,6 @@ footer {
     color: var(--primary-color);
     border-radius: 10px;
     padding-left: 3%;
-    transition: background-color 0.3s, color 0.3s;
 }
 
 #sideNavbar a:hover {
@@ -254,7 +254,7 @@ footer {
 }
 
 #loginContainer img{
-	background-size: cover;
+	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center center;
 }
@@ -262,13 +262,6 @@ footer {
 #loginContainer .form-control{
     height: 45px;
     margin-bottom: 4%;
-    &:focus, &:active {
-        color: var(--primary-color);
-        background-color: var(--main-color);
-		outline: none !important;
-		box-shadow: none;
-		border: 1px solid var(--secondary-color);
-	}
 }
 
 #loginContainer .social-media{
@@ -313,6 +306,22 @@ footer {
     font-size: 15px;
 }
 
+
+
+.form-control{
+    &:focus, &:active {
+        color: var(--primary-color);
+        background-color: var(--main-color);
+		outline: none !important;
+		box-shadow: none;
+		border: 1px solid var(--secondary-color);
+	}
+}
+
+.form-control::placeholder{
+    color: var(--contrast-color);
+    opacity: 0.5;
+}
 
 .btn-primary {
     background-color: var(--toggle-color);
