--- a/reserva/templates/lista/solicitacao.html
+++ b/reserva/templates/lista/solicitacao.html
@@ -65,7 +65,8 @@
                 <th>Status</th>
                 <th>Justificativa</th>
                 <th>Data</th>
-                <th>Hora</th>
+                <th>Entrada</th>
+                <th>Saída</th>
                 <th>Postado em</th>
                 <th>Opções</th>
             </thead>
@@ -78,7 +79,8 @@
                 <th>Status</th>
                 <th>Justificativa</th>
                 <th>Data</th>
-                <th>Hora</th>
+                <th>Entrada</th>
+                <th>Saída</th>
                 <th>Opções</th>
             </thead>
 
