--- a/reserva/templates/sing-up.html
+++ b/reserva/templates/sing-up.html
@@ -30,8 +30,8 @@
             
                                 <div class="w-100">
                                         <p class="social-media d-flex justify-content-end position-relative">
-                                            <a href="https://i.pinimg.com/originals/14/8d/1c/148d1ce4b0fdf5218a5ec53595487ca0.gif" class="social-icon d-flex align-items-center justify-content-center"><i class="fa-brands fa-facebook"></i></a>
-                                            <a href="https://media.tenor.com/UKKPyTd7AS0AAAAC/manoel-gomes.gif" class="social-icon d-flex align-items-center justify-content-center"><i class="fa-brands fa-twitter"></i></i></a>
+                                            <a href="https://i.pinimg.com/originals/14/8d/1c/148d1ce4b0fdf5218a5ec53595487ca0.gif" target="_blank" class="social-icon d-flex align-items-center justify-content-center"><i class="fa-brands fa-facebook"></i></a>
+                                            <a href="https://media.tenor.com/UKKPyTd7AS0AAAAC/manoel-gomes.gif" target="_blank" class="social-icon d-flex align-items-center justify-content-center"><i class="fa-brands fa-twitter"></i></i></a>
                                         </p>
                                 </div>
                             </div>
