--- a/reserva/templates/dashboard.html
+++ b/reserva/templates/dashboard.html
@@ -12,23 +12,28 @@
             Página Inicial</h1>  
         
         <hr>
-        
-        <div class="d-flex align-items-center">
-                <a class="" href="{% url 'criar-solicitacao' %}">
-                    <strong>Solicite um horário para reservar a Sala de Música.</strong></a>
 
+        <div class="d-flex align-items-center">
+                    <strong>Solicite um horário para reservar a Sala de Música <a href="{% url 'listar-solicitacao' %}">aqui.</a> 
         </div>
         
         <hr>
 
-        <div id="calendarRow" class="row d-flex py-2">
+        <h2>Horários Reservados - Sala E04</h2>
+        <div id="calendarRow" class="row d-flex py-2 ">
             <div class="col-md-9 mx-auto">
-                <div id='calendar'></div> 
+                <div id='calendar' class="rounded-top-4 "></div> 
                 </div>
         </div>
         
     </div> 
-        
+    
+    {% for solicitacao in object_list %}
+
+    {% include 'lista/detail.html' %}
+
+    {%endfor%}
+
 </div>
 {% endblock %}
 
@@ -36,35 +41,39 @@
     
 <script>
 
-    document.addEventListener('DOMContentLoaded', function() {
-      var calendarEl = document.getElementById('calendar');
-      var calendar = new FullCalendar.Calendar(calendarEl, {
+document.addEventListener('DOMContentLoaded', function() {
+    var calendarEl = document.getElementById('calendar');
+    var calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'dayGridMonth',
         locale: 'pt-br',
         buttonText: {today: 'Hoje'},
         dayMaxEventRows: true, // for all non-TimeGrid views
-            views: {
-                timeGrid: {
+        views: {
+            timeGrid: {
                 dayMaxEventRows: 6 // adjust to 6 only for timeGridWeek/timeGridDay
-                }
-            },
-
+            }
+        },
         events: [
-            {% for solicitacao in object_list %}
-                {
-                    title: '{{ solicitacao.usuario }}',
-                    start: '{{ solicitacao.data | date:"Y-m-d" }}T{{solicitacao.entry_hour}}',
-                    end: '{{ solicitacao.data | date:"Y-m-d" }}T{{solicitacao.exit_hour}}',
-                    extendedProps: { 
-                        justificativa: '{{ solicitacao.justificativa }}'
-                    },
-                }, 
-            {% endfor %}
+            // {% for solicitacao in object_list %}
+            {
+                title: '{{ solicitacao.profile }}',
+                start: '{{ solicitacao.data | date:"Y-m-d" }}T{{solicitacao.entry_hour}}',
+                id: '{{solicitacao.id}}'
+            }, 
+            // {% endfor %}
         ],
+        eventDidMount: function(info) {
+            var eventElement = info.el;
+            var solicitacaoId = info.event.id; // Acesse o ID da solicitação usando info.event.id
+            eventElement.setAttribute('data-bs-toggle', 'modal');
+            eventElement.setAttribute('data-bs-target', '#detailModal' + solicitacaoId);
+            eventElement.setAttribute('type', 'button');
+        },
 
-      });
-      calendar.render();
     });
+    calendar.render();
+});
+
 
   </script>
 
