--- a/reserva/templates/lista/parcial-list.html
+++ b/reserva/templates/lista/parcial-list.html
@@ -4,11 +4,11 @@
     <td>
         <div class="d-flex  ">
     {% if solicitacao.status.id == 1 %}
-        <i class="fa-regular fa-circle mx-auto"></i>  
+        <i class="fa-regular fa-circle fa-xl ms-3"></i>  
     {% elif solicitacao.status.id == 2 %}
-        <i class="fa-regular fa-circle-xmark red mx-auto"></i>  
+        <i class="fa-regular fa-circle-xmark fa-xl red ms-3"></i>  
     {% elif solicitacao.status.id == 3 %}
-        <i class="fa-regular fa-circle-check green mx-auto"></i>  
+        <i class="fa-regular fa-circle-check fa-xl green ms-3"></i>  
     {%endif%}
         </div>
     <!-- {{ solicitacao.status }} -->
