--- a/reserva/templates/lista/parcial-update.html
+++ b/reserva/templates/lista/parcial-update.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="modal-body">
-        <strong style="color: #20399e">{{form.instance}}</strong>  
+        <strong class="text-primary">{{form.instance}}</strong>  
         <p class='lead'> Preencha todos os campos obrigatórios.</p>
         {{ form|crispy }}
     </div>
