--- a/reserva/templates/login.html
+++ b/reserva/templates/login.html
@@ -15,7 +15,14 @@
 {% block conteudo %}
 <div class="container fluid">
     <div class="container">
-        <div id="loginContainer" class="d-flex justify-content-center">
+
+
+            <div class="col-12">
+                <div class="pt-5 mb-2 ms-4"><a  href="{% url 'index' %}"><i class="fa-solid fa-angles-left"></i> INICIO</a></div>
+                
+     
+
+        <div id="loginContainer" class="d-flex justify-content-center mt-0 ">
             {% if request.user.is_authenticated %}
             
             <div class="col-sm-10 col-md-5">
@@ -28,6 +35,7 @@
             
 
             {% else %}
+           
 
                 <div class="col-sm-12 col-lg-10">
                     <div class="wrap d-md-flex">
@@ -71,15 +79,15 @@
                             </form>
             
                             <p class="text-center pt-4">Não possui uma conta? <a data-toggle="tab" href="{% url 'registrar' %}">Crie uma conta</a></p>
-                            </div>
                         </div>
-            
                     </div>
+            
                 </div>
+        </div>
 
+    </div>
             {% endif %}
             
-        </div>
     </div>
 </div>
 
