--- a/reserva/templates/modelo.html
+++ b/reserva/templates/modelo.html
@@ -14,10 +14,13 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 
-    <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    <!-- FONTAWESOME -->
+    <link href="{% static 'css/fontawesome.all.min.css' %}" rel="stylesheet" type="text/css">
+    <script src="{% static 'js/fontawesome.all.min.js' %}"></script>
  
 </head>
 <body>
+
     {% block menu %}
       {% include 'navbar.html' %}
     {% endblock %}
@@ -33,10 +36,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 
+
     <script src="{% static 'js/sidebar.js' %}"></script>
 
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
 
-    {% block script %} {% endblock %}  
+    {% block script %} {% endblock %}   
 </body>
 </html>
