--- a/reserva/templates/navbar.html
+++ b/reserva/templates/navbar.html
@@ -1,35 +1,48 @@
-
+{% load static %}
 
 <div  class="main-container d-flex">
     <div class="sidebar" id="sideNavbar">
 
-        <div class="header-box px-2 pt-3 pb-4 d-flex justify-content-between">
-            <h1 id="navbarLogo" class="fs-5">
-                <span class="bg-white rounded shadow px-2 me-2"><i class="fa-solid fa-guitar text-dark"></i></span>
-                iNFO MúSiCA</h1>
+        <div class="header-box px-2 pt-2 pb-3 d-flex justify-content-between">
+            <div id="navbarLogo">
+                <a href="{% url 'inicio'%}">
+                    <h1 class="fs-5">
+                        <span class=" rounded px-2 py-1 me-2"><i class="fa-solid fa-music fa-lg text-white-50"></i></span>
+                        iNFO MúSiCA</h1>
+                </a>
+            </div>
 
-            <button class="btn d-md-none d-block close-btn px-2 py-0 pb-2">
-                <i class="fa-solid fa-xmark"></i></button>
+            <button class="btn d-md-none d-block close-btn px-2 py-0 pb-2" >
+                <i class="fa-solid fa-xmark text-white"></i></button>
         </div>
 
-        <ul class="list-unstyled px-2">
-            <li><a href="{% url 'inicio'%}" class="text-decoration-none px-3 py-2 d-block">
-                <i class="fa-solid fa-house"></i> Inicio</a></li>
+    <div id="sidebarItem">
+        <ul class="px-2">
+            <li><a href="{% url 'inicio'%}" class="row py-2 mx-1 d-flex">
+                <div class="col-2 text-center"> <i class="fa-solid fa-house"></i></div>
+                <div class="col-10"> Inicio</div>
+                 </a></li>
 
             {% for group in request.user.groups.all %}
             {% if group.name == 'Admin' %}
             <!-- NAV ADMIN -->
 
-            <li><a href="{% url 'listar-solicitacao'%}" class="text-decoration-none px-3 py-2 d-block">
-                <i class="fa-solid fa-list"></i> Gerenciar Solicitações</a></li>
+            <li><a href="{% url 'listar-solicitacao'%}" class="row py-2 mx-1 d-flex">
+                <div class="col-2 text-center"> <i class="fa-solid fa-list"></i></div>
+                <div class="col-10"> Gerenciar Solicitações</div> 
+                 </a></li>
 
-            <li><a href="{% url 'listar-usuario'%}" class="text-decoration-none px-3 py-2 d-block">
-                <i class="fa-solid fa-user-group"></i> Gerenciar Usuários</a></li>
-            
+            <li><a href="{% url 'listar-usuario'%}" class="row py-2 mx-1 d-flex">
+                <div class="col-2 text-center"> <i class="fa-solid fa-user-group"></i></div>
+                <div class="col-10"> Gerenciar Usuários</div>
+                 </a></li>
+
             {%else%}
             <!-- NAV USER -->
-            <li><a href="{% url 'listar-solicitacao'%}" class="text-decoration-none px-3 py-2 d-block">
-                <i class="fa-solid fa-list"></i> Minhas Solicitações</a></li>
+            <li><a href="{% url 'listar-solicitacao'%}" class="row py-2 mx-1 d-flex">
+                <div class="col-2 text-center"> <i class="fa-solid fa-list"></i></div>
+                <div class="col-10"> Minhas Solicitações</div> 
+                 </a></li>
             {%endif%}
             {%endfor%}
 
@@ -37,11 +50,13 @@
 
         <hr class="h-color mx-2">
 
-        <ul class="list-unstyled px-2">
-            <li class=""><a href="" class="text-decoration-none px-3 py-2 d-block"><i class="fa-solid fa-gear"></i>
-                    Configurações</a></li>
-
+        <ul class="px-2">
+            <li><a href="" class="row px-2 py-2 mx-1 d-flex">
+                <div class="col-2 text-center"> <i class="fa-solid fa-gear"></i></div>
+                <div class="col-10"> Configurações</div>
+                 </a></li>
         </ul>
+    </div>
 
     </div>
     <div class="content">
@@ -51,7 +66,7 @@
                 <div class="d-flex justify-content-between d-md-none d-block">
                  <button class="btn px-1 py-0 open-btn me-2"><i class="fa-solid fa-bars"></i></button>
                     <a class="navbar-brand fs-4" href="{% url 'inicio'%}"><span class="bg-dark rounded px-2 py-1">
-                        <i class="fa-solid fa-guitar"></i></span></a>   
+                        <i class="fa-solid fa-guitar"></i></span></a>  
                 </div>
                 
                 <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="collapse"
@@ -60,15 +75,20 @@
                     <i class="fa-solid fa-circle-user fa-lg"></i>
                 </button>
 
+        
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-md-0">
 
+
                         {% if request.user.is_authenticated %}
                         <li class="nav-item dropdown-center">
-                            <a class="btn dropdown-toggle " href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="btn" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 {{request.user}}
                               </a>
-                            
+
+                              <a href="{% url 'perfil' %}">
+                                <img class="img-fluid rounded-circle mx-1" src="{% static 'img/user-img-placeholder.png' %}" style="width: 30px ;"></a>
+
                               <ul id="profileDropdown" class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="{% url 'perfil' %}">Meu Perfil</a></li>
                                 
