--- a/reserva/templates/sing-up.html
+++ b/reserva/templates/sing-up.html
@@ -15,9 +15,13 @@
 {% block conteudo %}
 <div class="container fluid">
     <div class="container">
-        <div id="loginContainer" class="d-flex justify-content-center">
 
-                <div class="col-sm-12 col-lg-10">
+        <div class="col-12">
+            <div class="pt-5 mb-2 ms-4"><a  href="{% url 'index' %}"><i class="fa-solid fa-angles-left"></i> INICIO</a></div>
+
+        <div id="loginContainer" class="d-flex justify-content-center mt-0">
+
+                <div class="col-sm-12 col-lg-10 ">
                     <div class="wrap d-md-flex">
             
                         <img src="{% static 'img/cirilo.gif' %}" class="hidden-mobile">
