--- a/reserva/templates/dashboard.html
+++ b/reserva/templates/dashboard.html
@@ -82,7 +82,7 @@
                     title: '{{ solicitacao.profile }}',
                     start: '{{ solicitacao.data | date:"Y-m-d" }}T{{solicitacao.entry_hour}}',
                     id: '{{solicitacao.id}}',
-                    borderColor: 'blue'
+                    borderColor: 'green'
                 }, 
     
                 // {% elif solicitacao.status.id == 1 %}
