--- a/reserva/templates/solicitacao/adm-list.html
+++ b/reserva/templates/solicitacao/adm-list.html
@@ -8,7 +8,7 @@
     <td>
         <div class="d-flex">
     {% if solicitacao.status.id == 1 %}
-        <i class="fa-solid fa-circle-exclamation fa-xl mx-auto"></i>  
+        <i class="fa-solid fa-circle-exclamation yellow fa-xl mx-auto"></i>  
     {% elif solicitacao.status.id == 2 %}
         <i class="fa-solid fa-circle-xmark fa-xl red mx-auto"></i>  
     {% elif solicitacao.status.id == 3 %}
